# Stegstr

./: .gitignore  CI.md  IDENTITY_AND_EMBED.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: First-time-opening-macos.txt
.github/workflows/: README.md  build.yml  cleanup-failed-runs.yml  lint-workflows.yml  release.yml
channel_simulator/: BASELINE_RESULTS.md  CHANNEL_SPEC.md  README.md  Y_before.npy  channel.py  dct_stego.py  dct_variants.py  demo_qim_embed.py  qim_cli.py  requirements.txt  run_matrix.py  test_channel_robustness.py
docs/: WHATSAPP_PLAN.md  robust_comparison.md  robust_stego_options.md
schema/: bundle.schema.json
scripts/: launch-both-profiles.sh  launch-profile-1.sh  launch-profile-2.sh
src/: App.css  App.tsx  BookmarksView.tsx  EditProfileModal.tsx  EmbedModal.tsx  ErrorBoundary.tsx  ExploreView.tsx  FeedView.tsx  FollowingView.tsx  IdentityView.tsx  LoginModal.tsx  MessagesView.tsx  NewMessageModal.tsx  NoteCard.tsx  NotificationsView.tsx  ProfileView.tsx  SettingsView.tsx  Toast.tsx  constants.ts  dct.ts  logger.ts  main.tsx  nostr-stub.ts  platform-desktop.ts  platform-web.ts  png-decode.ts  png-encode.ts  reed-solomon.ts  relay.ts  stego-crypto.ts  stego-dot-web.ts  stego-dot.ts  stego-qim.ts  stego-web.ts  types.ts  upload.ts  usePersistedState.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  stego.rs  stego_crypto.rs  stego_dot.rs
website/: DEPLOY-CPANEL.md  agents.txt  downloads.html  getting-started.html  index.html  robots.txt
(+39 files in other folders)
