[package]
name = "stegstr"
version = "0.1.0"
description = "Nostr client with steganographic transport"
edition = "2021"
default-run = "stegstr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "stegstr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "stegstr-cli"
path = "src/bin/stegstr_cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
dirs = "5"
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
base64 = "0.22"
aes-gcm = "0.10"
aead = "0.5"
sha2 = "0.10"
rand = "0.8"
secp256k1 = { version = "0.28", features = ["rand-std"] }
hex = "0.4"

